--- a/src/main/resources/static/front/css/style.css
+++ b/src/main/resources/static/front/css/style.css
@@ -534,3 +534,9 @@
     color: rgba(255, 255, 255, .5);
     margin-right: 10px;
 }
+.about-text {
+    white-space: pre-line;
+    line-height: 1.8;
+    font-size: 17px;
+    color: #333;
+}
