--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
     <!-- Navbar Start -->
     <div class="container-fluid bg-light sticky-top p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
-            <a href="index.html" class="navbar-brand bg-primary py-4 px-5 me-0">
+            <a href="index" class="navbar-brand bg-primary py-4 px-5 me-0">
                 <h1 class="mb-0"><i class="bi bi-scissors"></i>Salone</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
@@ -58,7 +58,7 @@
             <div class="collapse navbar-collapse p-3" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
                     <a href="/" class="nav-item nav-link active">Ana səhifə</a>
-                    <a href="about.html" class="nav-item nav-link">Haqqımızda</a>
+                    <a href="about" class="nav-item nav-link">Haqqımızda</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Xidmətlər</a>
                         <div class="dropdown-menu bg-light mt-2">
@@ -70,18 +70,18 @@
                             </a>
                         </div>
                     </div>
-                    <a href="price.html" class="nav-item nav-link">Qiymətlər</a>
+                    <a href="pricing" class="nav-item nav-link">Qiymətlər</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Səhifələr</a>
                         <div class="dropdown-menu bg-light mt-2">
-                            <a href="gallery.html" class="dropdown-item">Qalereya</a>
-                            <a href="blog.html" class="dropdown-item">Bloq</a>
-                            <a href="team.html" class="dropdown-item">Komandamız</a>
-                            <a href="testimonial.html" class="dropdown-item">Rəylər</a>
-                            <a href="404.html" class="dropdown-item">404 Page</a>
+                            <a href="gallery" class="dropdown-item">Qalereya</a>
+                            <a href="blog" class="dropdown-item">Bloq</a>
+                            <a href="team" class="dropdown-item">Komandamız</a>
+                            <a href="testimonial" class="dropdown-item">Rəylər</a>
+                            <a href="404" class="dropdown-item">404 Page</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Əlaqə</a>
+                    <a href="contact" class="nav-item nav-link">Əlaqə</a>
                 </div>
                 <div class="d-flex">
                     <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
@@ -540,7 +540,7 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-6 pe-lg-5">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="index" class="navbar-brand">
                         <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Salone</h1>
                     </a>
                     <p>Müştərilərimizə keyfiyyətli xidmət və rahat mühit təqdim edirik. Gözəlliyiniz bizim üçün önəmlidir.</p>
@@ -558,10 +558,10 @@
                     <div class="row g-4">
                         <div class="col-sm-6">
                             <h5 class="text-primary mb-4">Sürətli keçidlər</h5>
-                            <a class="btn btn-link" href="">Haqqımızda</a>
-                            <a class="btn btn-link" href="">Əlaqə</a>
-                            <a class="btn btn-link" href="">Xidmətlər</a>
-                            <a class="btn btn-link" href="">Şərtlər və Qaydalar</a>
+                            <a class="btn btn-link" href="/haqqimizda">Haqqımızda</a>
+                            <a class="btn btn-link" href="/elaqe">Əlaqə</a>
+                            <a class="btn btn-link" href="/xidmetler">Xidmətlər</a>
+                            <a class="btn btn-link" href="#">Şərtlər və Qaydalar</a>
                         </div>
                         <div class="col-sm-6">
                             <h5 class="text-primary mb-4">Sürətli keçidlər</h5>
