--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -48,10 +48,20 @@
         </button>
         <div class="collapse navbar-collapse p-3" id="navbarCollapse">
             <div class="navbar-nav mx-auto">
-                <a href="/"         class="nav-item nav-link">Ana səhifə</a>
-                <a href="/haqqimizda" class="nav-item nav-link">Haqqımızda</a>
-                <a href="/xidmetler"  class="nav-item nav-link">Xidmətlər</a>
-                <a href="/qiymetler"    class="nav-item nav-link">Qiymətlər</a>
+                <a href="/" class="nav-item nav-link">Ana səhifə</a>
+                <a href="/about" class="nav-item nav-link">Haqqımızda</a>
+                <div class="nav-item dropdown">
+                    <a href="/services" class="nav-item nav-link">Xidmətlər</a>
+                    <div class="dropdown-menu bg-light mt-2">
+                        <a class="dropdown-item"
+                           th:each="c : ${navCategories}"
+                           th:text="${c.name}"
+                           th:href="'/category/' + ${c.id}">
+                            Category Name
+                        </a>
+                    </div>
+                </div>
+                <a href="/pricing" class="nav-item nav-link">Qiymətlər</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Səhifələr</a>
                     <div class="dropdown-menu bg-light mt-2">
@@ -62,7 +72,7 @@
                         <a href="/404"          class="dropdown-item">404 səhifə</a>
                     </div>
                 </div>
-                <a href="/əlaqə"  class="nav-item nav-link">Əlaqə</a>
+                <a href="/contact" class="nav-item nav-link">Əlaqə</a>
             </div>
             <div class="d-flex">
                 <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
@@ -102,10 +112,10 @@
                 <div class="row g-4">
                     <div class="col-sm-6">
                         <h5 class="text-primary mb-4">Quick Links</h5>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Our Services</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
+                        <a class="btn btn-link" href="/haqqimizda">Haqqımızda</a>
+                        <a class="btn btn-link" href="/elaqe">Əlaqə</a>
+                        <a class="btn btn-link" href="/xidmetler">Xidmətlər</a>
+                        <a class="btn btn-link" href="#">Şərtlər və Qaydalar</a>
                     </div>
                     <div class="col-sm-6">
                         <h5 class="text-primary mb-4">Popular Links</h5>
