--- a/src/main/resources/templates/price.html
+++ b/src/main/resources/templates/price.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="/front/img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,15 +23,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/front/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/front/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="/front/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/front/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/front/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -129,42 +129,42 @@
             <div class="col-md-6">
                 <div class="h-100 bg-dark p-5">
                     <div class="price-item mb-3 wow fadeIn" data-wow-delay="0.1s">
-                        <img class="img-fluid flex-shrink-0" src="img/price-1.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="/front/img/price-1.jpg" alt="">
                         <div class="text-end px-4">
                             <h6 class="text-uppercase text-primary">Haircut</h6>
                             <h3 class="text-white font-work-sans mb-0">$49</h3>
                         </div>
                     </div>
                     <div class="price-item mb-3 wow fadeIn" data-wow-delay="0.2s">
-                        <img class="img-fluid flex-shrink-0" src="img/price-2.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="/front/img/price-2.jpg" alt="">
                         <div class="text-end px-4">
                             <h6 class="text-uppercase text-primary">Makeup</h6>
                             <h3 class="text-white font-work-sans mb-0">$79</h3>
                         </div>
                     </div>
                     <div class="price-item mb-3 wow fadeIn" data-wow-delay="0.3s">
-                        <img class="img-fluid flex-shrink-0" src="img/price-3.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="/front/img/price-3.jpg" alt="">
                         <div class="text-end px-4">
                             <h6 class="text-uppercase text-primary">Manicure</h6>
                             <h3 class="text-white font-work-sans mb-0">$59</h3>
                         </div>
                     </div>
                     <div class="price-item mb-3 wow fadeIn" data-wow-delay="0.4s">
-                        <img class="img-fluid flex-shrink-0" src="img/price-4.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="/front/img/price-4.jpg" alt="">
                         <div class="text-end px-4">
                             <h6 class="text-uppercase text-primary">Pedicure</h6>
                             <h3 class="text-white font-work-sans mb-0">$49</h3>
                         </div>
                     </div>
                     <div class="price-item mb-3 wow fadeIn" data-wow-delay="0.5s">
-                        <img class="img-fluid flex-shrink-0" src="img/price-5.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="/front/img/price-5.jpg" alt="">
                         <div class="text-end px-4">
                             <h6 class="text-uppercase text-primary">Massage</h6>
                             <h3 class="text-white font-work-sans mb-0">$39</h3>
                         </div>
                     </div>
                     <div class="price-item mb-3 wow fadeIn" data-wow-delay="0.6s">
-                        <img class="img-fluid flex-shrink-0" src="img/price-6.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="/front/img/price-6.jpg" alt="">
                         <div class="text-end px-4">
                             <h6 class="text-uppercase text-primary">Skin Care</h6>
                             <h3 class="text-white font-work-sans mb-0">$99</h3>
@@ -258,15 +258,15 @@
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/front/lib/wow/wow.min.js"></script>
+    <script src="/front/lib/easing/easing.min.js"></script>
+    <script src="/front/lib/waypoints/waypoints.min.js"></script>
+    <script src="/front/lib/counterup/counterup.min.js"></script>
+    <script src="/front/lib/lightbox/js/lightbox.min.js"></script>
+    <script src="/front/lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src="/front/js/main.js"></script>
 </body>
 
 </html>
