--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="az"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout}">net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 
 <body>
-    <main layout:fragment="content">
+<main layout:fragment="content">
 
     <!-- Hero Start -->
     <div class="container-fluid bg-light page-header py-5 mb-5">
@@ -14,8 +13,7 @@
             <h1 class="display-1 animated slideInLeft">Haqqımızda</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center animated slideInLeft mb-0">
-                    <li class="breadcrumb-item"><a class="text-primary" href="#">Ana səhifə</a></li>
-                    <li class="breadcrumb-item"><a class="text-primary" href="#">Səhifələr</a></li>
+                    <li class="breadcrumb-item"><a class="text-primary" href="/">Ana səhifə</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Haqqımızda</li>
                 </ol>
             </nav>
@@ -35,7 +33,7 @@
                             <i class="fa fa-phone fa-2x text-dark"></i>
                         </div>
                         <div class="px-3">
-                            <h3>+0123456789</h3>
+                            <h3>+994 50 512 50 66</h3>
                             <span>Pulsuz konsultasiya üçün 24/7 zəng edin</span>
                         </div>
                     </div>
@@ -43,10 +41,10 @@
 
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h1 class="font-dancing-script text-primary">Haqqımızda</h1>
-                    <h1 class="mb-5" th:text="${about.subtitle}">Niyə bizi seçirlər?</h1>
-                    <p class="mb-4 about-text" th:text="${about.description}"></p>
-
-
+                    <h1 class="mb-5">Niyə bizi seçirlər?</h1>
+                    <p class="mb-4">
+                        Salonumuz peşəkar komanda və keyfiyyətli məhsullarla müştərilərinə fərqli təcrübə təqdim edir.
+                    </p>
 
                     <div class="row g-3 mb-5">
                         <div class="col-sm-6">
@@ -60,114 +58,18 @@
                             <div class="bg-light text-center p-4">
                                 <i class="fas fa-users fa-4x text-primary"></i>
                                 <h1 class="display-5" data-toggle="counter-up">999</h1>
-                                <p class="text-dark text-uppercase mb-0">Happy Customers</p>
+                                <p class="text-dark text-uppercase mb-0">Məmnun müştəri</p>
                             </div>
                         </div>
                     </div>
 
                     <a class="btn btn-primary text-uppercase px-5 py-3" href="">Daha çox</a>
                 </div>
-
             </div>
         </div>
     </div>
     <!-- About End -->
 
-
-    <!-- Team Start -->
-    <div class="container-fluid overflow-hidden py-5">
-        <div class="container">
-            <div class="text-center wow fadeIn" data-wow-delay="0.2s">
-                <h1 class="font-dancing-script text-primary">Komanda üzvləri</h1>
-                <h1 class="mb-5">Təcrübəli mütəxəssislərimiz</h1>
-            </div>
-            <div class="row g-4 team">
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="/front/img/team-1.jpg" alt="">
-                        <div class="team-overlay">
-                            <p class="text-primary mb-1">Saç ustası</p>
-                            <h4>Lily Taylor</h4>
-                            <div class="d-flex justify-content-center">
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2" href="">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="/front/img/team-2.jpg" alt="">
-                        <div class="team-overlay">
-                            <p class="text-primary mb-1">Dırnaq dizayneri</p>
-                            <h4>Olivia Smith</h4>
-                            <div class="d-flex justify-content-center">
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2" href="">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="/front/img/team-3.jpg" alt="">
-                        <div class="team-overlay">
-                            <p class="text-primary mb-1">Gözəllik mütəxəssisi</p>
-                            <h4>Ava Brown</h4>
-                            <div class="d-flex justify-content-center">
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2" href="">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="team-item position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="/front/img/team-4.jpg" alt="">
-                        <div class="team-overlay">
-                            <p class="text-primary mb-1">Spa mütəxəssisi</p>
-                            <h4>Amelia Jones</h4>
-                            <div class="d-flex justify-content-center">
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2 me-3" href="">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                                <a class="btn btn-dark btn-sm-square border-2" href="">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Team End -->
-
-    </main>
+</main>
 </body>
-
 </html>
