--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Salone - Beauty Salon Website Template</title>
+    <title>Beauty Salon Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -40,7 +40,7 @@
 <div class="container-fluid bg-light sticky-top p-0">
     <nav class="navbar navbar-expand-lg navbar-light p-0">
         <a href="/" class="navbar-brand bg-primary py-4 px-5 me-0">
-            <h1 class="mb-0"><i class="bi bi-scissors"></i>Salone</h1>
+            <h1 class="mb-0"><i class="bi bi-scissors"></i>La Beauty</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -51,7 +51,7 @@
                 <a href="/" class="nav-item nav-link">Ana səhifə</a>
                 <a href="/about" class="nav-item nav-link">Haqqımızda</a>
                 <div class="nav-item dropdown">
-                    <a href="/services" class="nav-item nav-link">Xidmətlər</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Xidmətlər</a>
                     <div class="dropdown-menu bg-light mt-2">
                         <a class="dropdown-item"
                            th:each="c : ${navCategories}"
@@ -69,7 +69,6 @@
                         <a href="/blog"         class="dropdown-item">Gözəllik bloqu</a>
                         <a href="/team"         class="dropdown-item">Komandamız</a>
                         <a href="/testimonial"  class="dropdown-item">Rəylər</a>
-                        <a href="/404"          class="dropdown-item">404 səhifə</a>
                     </div>
                 </div>
                 <a href="/contact" class="nav-item nav-link">Əlaqə</a>
@@ -77,7 +76,6 @@
             <div class="d-flex">
                 <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-primary btn-sm-square" href=""><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </nav>
@@ -94,7 +92,7 @@
         <div class="row g-5">
             <div class="col-lg-6 pe-lg-5">
                 <a href="/" class="navbar-brand">
-                    <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Salone</h1>
+                    <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>La Beauty</h1>
                 </a>
                 <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam sed
                     clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
@@ -104,7 +102,6 @@
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
