--- a/src/main/resources/static/front/css/style.css
+++ b/src/main/resources/static/front/css/style.css
@@ -540,3 +540,10 @@
     font-size: 17px;
     color: #333;
 }
+.gallery-item img {
+    height: 300px;
+    object-fit: cover;
+    width: 100%;
+    display: block;
+}
+
