--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html>
-<html lang="az" xmlns:th="http://www.thymeleaf.org">
+<html lang="az"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 
-<head>
-    <meta charset="utf-8">
-    <title>Salone - Gözəllik və Spa</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
-    <!-- Favicon -->
-    <link href="/front/img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Playfair+Display:wght@500&family=Work+Sans&display=swap"
-        rel="stylesheet">
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="/front/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="/front/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-    <link href="/front/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="/front/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="/front/css/style.css" rel="stylesheet">
-</head>
 
 <body>
+<main layout:fragment="content">
     <!-- Spinner Start -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
@@ -45,63 +17,18 @@
     <!-- Spinner End -->
 
 
-    <!-- Navbar Start -->
-    <div class="container-fluid bg-light sticky-top p-0">
-        <nav class="navbar navbar-expand-lg navbar-light p-0">
-            <a href="index" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>Salone</h1>
-            </a>
-            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
-                data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse p-3" id="navbarCollapse">
-                <div class="navbar-nav mx-auto">
-                    <a href="/" class="nav-item nav-link active">Ana səhifə</a>
-                    <a href="about" class="nav-item nav-link">Haqqımızda</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Xidmətlər</a>
-                        <div class="dropdown-menu bg-light mt-2">
-                            <a class="dropdown-item"
-                               th:each="c : ${navCategories}"
-                               th:text="${c.name}"
-                               th:href="'/category/' + ${c.id}">
-                                Category name
-                            </a>
-                        </div>
-                    </div>
-                    <a href="pricing" class="nav-item nav-link">Qiymətlər</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Səhifələr</a>
-                        <div class="dropdown-menu bg-light mt-2">
-                            <a href="gallery" class="dropdown-item">Qalereya</a>
-                            <a href="blog" class="dropdown-item">Bloq</a>
-                            <a href="team" class="dropdown-item">Komandamız</a>
-                            <a href="testimonial" class="dropdown-item">Rəylər</a>
-                            <a href="404" class="dropdown-item">404 Page</a>
-                        </div>
-                    </div>
-                    <a href="contact" class="nav-item nav-link">Əlaqə</a>
-                </div>
-                <div class="d-flex">
-                    <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-primary btn-sm-square" href=""><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- Navbar End -->
-
-
     <!-- Hero Start -->
     <div class="container-fluid p-0 hero-header bg-light mb-5">
         <div class="container p-0">
             <div class="row g-0 align-items-center">
                 <div class="col-lg-6 hero-header-text py-5">
                     <div class="py-5 px-3 ps-lg-0">
-                        <h1 class="font-dancing-script text-primary animated slideInLeft">Xoş gəldiniz</h1>
-                        <h1 class="display-1 mb-4 animated slideInLeft">Dəriyə qayğı, gözəlliyə yol</h1>
+                        <h1 class="font-dancing-script text-primary animated slideInLeft"
+                            th:text="${hero.welcomeText}">Xoş gəldiniz</h1>
+
+                        <h1 class="display-1 mb-4 animated slideInLeft"
+                            th:text="${hero.title}">Dəriyə qayğı, gözəlliyə yol</h1>
+
                         <div class="row g-4 animated slideInLeft">
                             <div class="col-md-6">
                                 <div class="d-flex align-items-center">
@@ -109,8 +36,10 @@
                                         <i class="fa fa-phone text-dark"></i>
                                     </div>
                                     <div class="px-3">
-                                        <h5 class="text-primary mb-0">Zəng et</h5>
-                                        <p class="fs-5 text-dark mb-0">+994 50 512 50 66</p>
+                                        <h5 class="text-primary mb-0" th:text="${hero.callLabel}">Zəng et</h5>
+                                        <p class="fs-5 text-dark mb-0" th:text="${hero.callNumber}">
+                                            +994 50 512 50 66
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -120,8 +49,10 @@
                                         <i class="fa fa-envelope text-dark"></i>
                                     </div>
                                     <div class="px-3">
-                                        <h5 class="text-primary mb-0">Bizə yazın</h5>
-                                        <p class="fs-5 text-dark mb-0">info@domain.com</p>
+                                        <h5 class="text-primary mb-0" th:text="${hero.mailLabel}">Bizə yazın</h5>
+                                        <p class="fs-5 text-dark mb-0" th:text="${hero.mailAddress}">
+                                            info@domain.com
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -130,9 +61,10 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="owl-carousel header-carousel animated fadeIn">
-                        <img class="img-fluid" src="/front/img/hero-slider-1.jpg" alt="">
-                        <img class="img-fluid" src="/front/img/hero-slider-2.jpg" alt="">
-                        <img class="img-fluid" src="/front/img/hero-slider-3.jpg" alt="">
+                        <img class="img-fluid"
+                             th:each="img : ${hero.images}"
+                             th:src="${img.imagePath}"
+                             alt="">
                     </div>
                 </div>
             </div>
@@ -141,12 +73,13 @@
     <!-- Hero End -->
 
 
+
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.2s">
-                    <img class="img-fluid w-100" src="/front/img/about.jpg" alt="About">
+                    <img class="img-fluid w-100" th:src="${about.imagePath}" alt="About">
                     <div class="d-flex align-items-center bg-light">
                         <div class="btn-square flex-shrink-0 bg-primary" style="width: 100px; height: 100px;">
                             <i class="fa fa-phone fa-2x text-dark"></i>
@@ -165,19 +98,21 @@
                         <div class="col-sm-6">
                             <div class="bg-light text-center p-4">
                                 <i class="fas fa-calendar-alt fa-4x text-primary"></i>
-                                <h1 class="display-5" data-toggle="counter-up">25</h1>
+                                <h1 class="display-5" data-toggle="counter-up"
+                                th:text="${about.experienceYears}">25</h1>
                                 <p class="text-dark text-uppercase mb-0">İllik təcrübə</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="bg-light text-center p-4">
                                 <i class="fas fa-users fa-4x text-primary"></i>
-                                <h1 class="display-5" data-toggle="counter-up">999</h1>
+                                <h1 class="display-5" data-toggle="counter-up"
+                                th:text="${about.clientsCount}">999</h1>
                                 <p class="text-dark text-uppercase mb-0">Məmnun müştəri</p>
                             </div>
                         </div>
                     </div>
-                    <a class="btn btn-primary text-uppercase px-5 py-3" href="">Daha çox</a>
+                    <a class="btn btn-primary text-uppercase px-5 py-3" href="/about">Daha çox</a>
                 </div>
             </div>
         </div>
@@ -198,8 +133,9 @@
                         <i th:class="'fa ' + ${category.icon} + ' fa-3x text-primary mb-3'"></i>
                         <h3 class="mb-3" th:text="${category.name}">Category Name</h3>
                         <p class="mb-3" th:text="${category.serviceCount + ' xidmət mövcuddur'}"></p>
-                        <a class="btn btn-sm btn-primary text-uppercase" href="">Daha çox
-                            <i class="bi bi-arrow-right"></i></a>
+                        <a class="btn btn-sm btn-primary text-uppercase" th:href="'/category/' + ${category.id}">
+                            Daha çox <i class="bi bi-arrow-right"></i>
+                        </a>
 
                     </div>
                 </div>
@@ -530,98 +466,12 @@
     <!-- Blog End -->
 
 
-
-
-
-    <!-- Footer Start -->
-    <div class="container-fluid footer position-relative bg-dark text-white-50 py-5 wow fadeIn" data-wow-delay="0.2s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-6 pe-lg-5">
-                    <a href="index" class="navbar-brand">
-                        <h1 class="display-5 text-primary mb-0"><i class="bi bi-scissors"></i>Salone</h1>
-                    </a>
-                    <p>Müştərilərimizə keyfiyyətli xidmət və rahat mühit təqdim edirik. Gözəlliyiniz bizim üçün önəmlidir.</p>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Ü. Hacıbəyov küç., Bakı, Azərbaycan</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+994 50 512 50 66</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
-                    <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-sm-square btn-primary me-3" href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-6 ps-lg-5">
-                    <div class="row g-4">
-                        <div class="col-sm-6">
-                            <h5 class="text-primary mb-4">Sürətli keçidlər</h5>
-                            <a class="btn btn-link" href="/haqqimizda">Haqqımızda</a>
-                            <a class="btn btn-link" href="/elaqe">Əlaqə</a>
-                            <a class="btn btn-link" href="/xidmetler">Xidmətlər</a>
-                            <a class="btn btn-link" href="#">Şərtlər və Qaydalar</a>
-                        </div>
-                        <div class="col-sm-6">
-                            <h5 class="text-primary mb-4">Sürətli keçidlər</h5>
-                            <a class="btn btn-link" href="">Haqqımızda</a>
-                            <a class="btn btn-link" href="">Əlaqə</a>
-                            <a class="btn btn-link" href="">Xidmətlər</a>
-                            <a class="btn btn-link" href="">Şərtlər və Qaydalar</a>
-                        </div>
-                        <div class="col-sm-12">
-                            <h5 class="text-primary mb-4">Newsletter</h5>
-                            <div class="position-relative w-100 mb-2">
-                                <input class="form-control bg-secondary border-0 w-100 ps-4 pe-5" type="text"
-                                    placeholder="E-poçtunuzu daxil edin" style="height: 60px;">
-                                <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-2 me-2"><i
-                                        class="fa fa-paper-plane text-primary fs-4"></i></button>
-                            </div>
-                            <p class="mb-0">Kampaniyalar və yeniliklər üçün abunə olun.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer End -->
-
-
-    <!-- Copyright Start -->
-    <div class="container-fluid bg-dark text-white border-top border-secondary py-4 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, Bütün hüquqlar qorunur.
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>.
-                    Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright End -->
-
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
-    <!-- JavaScript Libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist//front/js/bootstrap.bundle.min.js"></script>
-    <script src="/front/lib/wow/wow.min.js"></script>
-    <script src="/front/lib/easing/easing.min.js"></script>
-    <script src="/front/lib/waypoints/waypoints.min.js"></script>
-    <script src="/front/lib/counterup/counterup.min.js"></script>
-    <script src="/front/lib/lightbox//front/js/lightbox.min.js"></script>
-    <script src="/front/lib/owlcarousel/owl.carousel.min.js"></script>
+</main>
 
-    <!-- Template Javascript -->
-    <script src="/front/js/main.js"></script>
 </body>
 
 </html>
