--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -48,20 +48,27 @@
         </button>
         <div class="collapse navbar-collapse p-3" id="navbarCollapse">
             <div class="navbar-nav mx-auto">
-                <a href="/" class="nav-item nav-link">Ana səhifə</a>
-                <a href="/about" class="nav-item nav-link">Haqqımızda</a>
+                <a href="/" class="nav-item nav-link"
+                   th:classappend="${activePage == 'home'} ? ' active' : ''">Ana səhifə</a>
+
+                <a href="/about" class="nav-item nav-link"
+                   th:classappend="${activePage == 'about'} ? ' active' : ''">Haqqımızda</a>
+
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Xidmətlər</a>
                     <div class="dropdown-menu bg-light mt-2">
-                        <a class="dropdown-item"
-                           th:each="c : ${navCategories}"
+                        <a th:each="c : ${navCategories}"
                            th:text="${c.name}"
-                           th:href="'/category/' + ${c.id}">
-                            Category Name
+                           th:href="'/category/' + ${c.id}"
+                           class="dropdown-item">
                         </a>
                     </div>
                 </div>
-                <a href="/pricing" class="nav-item nav-link">Qiymətlər</a>
+
+                <a href="/price" class="nav-item nav-link"
+                   th:classappend="${activePage == 'price'} ? ' active' : ''">Qiymətlər</a>
+
+
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Səhifələr</a>
                     <div class="dropdown-menu bg-light mt-2">
@@ -71,12 +78,29 @@
                         <a href="/testimonial"  class="dropdown-item">Rəylər</a>
                     </div>
                 </div>
-                <a href="/contact" class="nav-item nav-link">Əlaqə</a>
+                <a href="/contact" class="nav-item nav-link"
+                   th:classappend="${activePage == 'contact'} ? ' active' : ''">Əlaqə</a>
+                <div class="d-flex align-items-center">
+                    <a href="/login" class="btn btn-primary btn-sm login-btn">Daxil ol</a>
+
+                </div>
+
+
             </div>
             <div class="d-flex">
-                <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-primary btn-sm-square me-3" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-primary btn-sm-square me-3"
+                   href="https://www.facebook.com/Lamia Budaqova"
+                   target="_blank">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+
+                <a class="btn btn-primary btn-sm-square me-3"
+                   href="https://www.instagram.com/budaqovalamia/"
+                   target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
+
         </div>
     </nav>
 </div>
@@ -152,6 +176,7 @@
 
 <!-- Template Javascript -->
 <script src="/front/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
